syntax = "proto3";

package com.road.yishi.proto.rebate;

message PackageStateMsg {
  string id = 1;
  bool isget = 2;
}
